--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <section>
 	<p> <strong>Actual Pantalla de Carga de Windows.</strong> <br> <br> En este momento, ya se ha leído el archivo Bootmgr y bcd.log</p>
 	<video height="600" width="600" muted autoplay loop>
-  <source src="./img/w10.webm" type="video/webm">
+  <source src="img/w10.webm" type="video/webm">
 Pantalla de Carga de Windows.
 </video>
 
@@ -83,7 +83,7 @@ Pantalla de Carga de Windows.
 <section>
   <h2>¿Cómo Arranca Windows?</h2>
 	<br>
-		<img height="200" width="600" src="img/mbr.png" alt="BootSequence">
+		<img height="200" width="600" src="img/MBR.png" alt="BootSequence">
 		<br>
 		<ol style="font-size:25px;">
 			<li>MBR pasa el control a 'Bootmgr'.</li>
