--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Pantalla de Carga de Windows.
 <section>
   <h2>Actualmente en Windows 10</h2>
 	<br>
-	<img height="200" width="600" src="img/captura1.png" alt="capturalocalizacion">
+	<img height="200" width="600" src="img/captura1.PNG" alt="capturalocalizacion">
 	<br>
   <p>
 		Existe una copia de bootmgr en la partición reservada para el sistema.
@@ -122,7 +122,7 @@ Pantalla de Carga de Windows.
 
 	<section>
 		<h3>Comenzamos nuestra primera práctica desarrollada por Darío</h3>
-		<img style="float:left;margin-right:25px" height="500" width="600" src="img/captura2.png" alt="comandos">
+		<img style="float:left;margin-right:25px" height="500" width="600" src="img/captura2.PNG" alt="comandos">
 		<p style="margin:30px">Los comandos señalados son los más importantes.</p>
 	</section>
 
