--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Pantalla de Carga de Windows.
 <section>
   <h2>Boot Sequence</h2>
 	<br>
-		<img height="200" width="600" src="img/mbr.png" alt="BootSequence">
+		<img height="200" width="600" src="img/MBR.png" alt="BootSequence">
 		<br>
 		<ol style="font-size:25px;">
 			<li>MBR pasa el control a 'Bootmgr'.</li>
